tests/toy/neg/000534_mutation.toylang
program a = { a = a + a bool; } .
